Add REST API project

--- a/BlazorProject/BlazorProject/Server/appsettings.json
+++ b/BlazorProject/BlazorProject/Server/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DBConnection": "server=(localdb)\\MSSQLLocalDB;database=EmployeeDB_Blazor;Trusted_Connection=true"
+  }
 }
